--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <section class="score">
+        <div class="description">
+            <h1>ROCK</h1>
+            <h1>PAPER</h1>
+            <h1>SCISSORS</h1>
+        </div>
+        <div class="computer-score"></div>
+        <div class="your-score"></div>
+    </section>
+   <section class="rps-triangle">
+<div class="line line1"></div>
+  <div class="line line2"></div>
+  <div class="line line3"></div>
+  <div class="circle circle1"></div>
+  <div class="circle circle2"></div>
+   <div class="circle circle3"></div>
+   </section>
 </body>
 </html>
