--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissor</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <section class="score">
@@ -12,8 +14,14 @@
             <h1>PAPER</h1>
             <h1>SCISSORS</h1>
         </div>
-        <div class="computer-score"></div>
-        <div class="your-score"></div>
+        <div class="box computer-score">
+            <h4>COMPUTER SCORE</h4>
+            <h1>0</h1>
+        </div>
+        <div class="box your-score">
+            <h4>YOUR SCORE</h4>
+            <h1>0</h1>
+        </div>
     </section>
    <section class="rps-triangle">
 <div class="line line1"></div>
@@ -23,5 +31,7 @@
   <div class="circle circle2"></div>
    <div class="circle circle3"></div>
    </section>
+   <section class="rules-popup"></section>
+   <button class="rules-btn">RULES</button>
 </body>
 </html>
