Added rules popup

--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
   <div class="circle circle2"></div>
    <div class="circle circle3"></div>
    </section>
-   <section class="rules-popup"></section>
+   <section class="rules-popup">
+    <div class="cancel-btn">X</div>
+    <h1>General rules</h1>
+    <ul>
+        <li>Rock beats scissors,scissors beat paper, and paper beats rock</li>
+        <li>Agree ahead of time whether you'll count off "rock,paper,scissors."</li>
+        <li>Use rock,paper,scissors to settle minor decisions or simple play to pass the time</li>
+        <li>If both players lay down the same hand, each player lays down another hand</li>
+    </ul>
+   </section>
    <button class="rules-btn">RULES</button>
 </body>
 </html>
