Added local storage functionality

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <h1>PAPER</h1>
         <h1>SCISSORS</h1>
       </div>
-      <div class="box computer-score">
+      <div class="box">
         <h4>COMPUTER SCORE</h4>
-        <h1>0</h1>
+        <h1 class="computer-score">0</h1>
       </div>
-      <div class="box your-score">
+      <div class="box ">
         <h4>YOUR SCORE</h4>
-        <h1>0</h1>
+        <h1 class="your-score">0</h1>
       </div>
     </section>
     <section class="rps-triangle">
