Added hurray images

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </ul>
     </section>
     <button onclick="showPopup()" class="rules-btn">RULES</button>
-
+     <button onclick="showPopup()" class="next-btn">NEXT</button>
     <section class="decider">
       <div class="player1" style="position: relative;text-align: center;">
         <span style="position: absolute;left: 20px;top:-30px">YOU PICKED</span>
